--- a/final_report/heatlod_final.tex
+++ b/final_report/heatlod_final.tex
@@ -57,13 +57,13 @@
 \usepackage{fancyhdr}
 \pagestyle{fancy}
 \lhead{Missing Data and LOD}
-\rhead{Paul Harmon, Nnamdi Ezike, and Andrea Mack}
+\rhead{Nnamdi Ezike, Paul Harmon, and Andrea Mack}
 \setlength{\headheight}{18pt}
 \setlength{\headsep}{2pt}
 
 \title{Pea Lodging Final Report}
 \author{Client: Jamin Smitchger\\
-Consultants: Paul Harmon, Nnamdi Ezike, and Andrea Mack}
+Consultants: Nnamdi Ezike, Paul Harmon, and Andrea Mack}
 \date{December 16, 2016}
 \IfFileExists{upquote.sty}{\usepackage{upquote}}{}
 \begin{document}
@@ -102,7 +102,25 @@ In Moccasin, only four variables were observed to have been measured both in 201
 The pairwise correlation matrix below shows that germination which was measured in Bozeman for all 3 years has weak correlation against all the variables measured. Also results from Bozeman shows that tendril length node of the plant was moderately to strongly correlated with the average length and tendril length of the plant with correlation coefficients of 0.61 and 0.48 respectively. The branch number and tiller diameter of the plant were also moderately correlated (r = 0.47). The maturity time of the plant was strongly and moderately correlated with the maximum nodes (r=0.65) and nodes of 1st flow (r=0.48). In addition, a correlation coefficient of 0.81 was observed for nodes 1st flow and maximum nodes of the plants.
 
 \begin{knitrout}\footnotesize
-\definecolor{shadecolor}{rgb}{1, 1, 1}\color{fgcolor}\begin{figure}[H]
+\definecolor{shadecolor}{rgb}{1, 1, 1}\color{fgcolor}\begin{kframe}
+\begin{verbatim}
+'data.frame':	787 obs. of  14 variables:
+ $ prcnt_lodging      : num  17.3 NA 52.4 22.7 29.4 ...
+ $ branch_numb        : num  3.07 3.12 3 3 2 ...
+ $ plant_height       : num  42.4 NA 30 34 31.2 ...
+ $ plant_length       : num  51.4 NA 63 44 44.2 ...
+ $ mat_time           : num  NA NA NA NA NA NA NA NA NA NA ...
+ $ germ               : Factor w/ 60 levels "","#DIV/0!","10",..: 55 1 25 4 28 50 21 50 23 21 ...
+ $ tendril_length     : num  19.9 14.2 21.5 15 17 ...
+ $ main_stm_diam      : num  2.74 NA 2.33 NA 3.04 ...
+ $ tendril_length_node: num  18.2 14.2 20.3 15 14.8 ...
+ $ nodes_1st_flow     : num  16.5 20 14 19 15 ...
+ $ max_nodes          : num  21 25.5 23 23 19 18 24 19 22 19 ...
+ $ avg_total_yield    : num  14.9 NA 10.8 10.9 12.9 ...
+ $ tiller_diam        : num  3.27 NA 3.3 NA 3.39 ...
+ $ comp_tiller_diam   : num  0.791 NA 1.218 NA 0.858 ...
+\end{verbatim}
+\end{kframe}\begin{figure}[H]
 
 {\centering \includegraphics[width=\maxwidth]{figure/merged-1} 
 
